# Lemuria

./: CMakeLists.txt  README.md
cmake/: FindBullet.cmake  FindCEGUI.cmake  FindOgreOggSound.cmake  FindRakNet.cmake
data/cfg/: multiplayer.cfg  plugins.cfg  plugins_d.cfg
data/dat/: test.scene
data/dat/gui/layouts/: LoadingScreen.layout  MainMenu.layout
data/dat/material/: test_MainGround.material
data/dat/mesh/: test_TreeSpawn01.mesh  test_oChrystal.mesh  test_pho_Column004.mesh
data/dat/scene/: test.scene
data/dat/scene/material/: test.material  test_LinkPlace.material
data/dat/scene/mesh/: penguin.mesh  test_oSkyDome.mesh  test_pho_EndWall.mesh  test_pho_SpawnPlace.mesh
data/gui/layouts/: LoadingScreen.layout
src/: CMakeLists.txt  crClient.cpp  crClient.h  crGUIManager.cpp  crGUIManager.h  crKeyMgr.cpp  crMouseMgr.cpp  crPlayer.cpp  crPlayer.h  ntMessage.cpp  ntMessage.h  phAvatarController.cpp  phAvatarController.h  phBullet.cpp  phBullet.h  scObjectMgr.cpp  scObjectMgr.h  scWaveset.cpp  scWaveset.h
src/crPlayer/: CMakeLists.txt  phAvatarController.cpp
src/ntMessage/: CMakeLists.txt  ntNetMgr.cpp  ntNetMgr.h
src/ntNetwork/: CMakeLists.txt  ntMessage.cpp  ntMessage.h  ntNetMgr.cpp  ntNetMgr.h  ntPlayer.cpp  ntPlayer.h
src/server/: CMakeLists.txt  svMain.cpp  svServer.cpp  svServer.h
src/shared/: CMakeLists.txt  ntManager.cpp  ntManager.h  ntMessage.cpp  ntMessage.h  ntPlayer.cpp  ntPlayer.h
